name:              croniker
version:           0.0.0
cabal-version:     >= 1.8
build-type:        Simple

Flag dev
    Description:   Turn on development settings, like auto-reload templates.
    Default:       False

Flag library-only
    Description:   Build for use with "yesod devel"
    Default:       False

library
    hs-source-dirs: ., app, src
    exposed-modules: Application
                     Croniker.MonikerFieldChecks
                     Croniker.Time
                     Croniker.Types
                     Croniker.UrlParser
                     Data.TZLabel
                     Form.Profile
                     Foundation
                     Handler.ChooseTimezone
                     Handler.Common
                     Handler.DeleteProfile
                     Handler.Feed
                     Handler.Profile
                     Handler.Root
                     Handler.Settings
                     Handler.UpdateProfilesTask
                     Handler.UpdateUser
                     Helper.HttpExceptionHandler
                     Helper.Request
                     Helper.TextConversion
                     Import
                     Import.NoFoundation
                     Model
                     Model.FormProfile
                     Model.Profile
                     Model.User
                     Settings
                     Settings.StaticFiles
                     TwitterClient

    if flag(dev) || flag(library-only)
        cpp-options:   -DDEVELOPMENT
        ghc-options:   -Wall -fwarn-tabs -O0
    else
        ghc-options:   -Wall -fwarn-tabs -O2

    extensions: TemplateHaskell
                QuasiQuotes
                OverloadedStrings
                NoImplicitPrelude
                MultiParamTypeClasses
                TypeFamilies
                GADTs
                GeneralizedNewtypeDeriving
                FlexibleContexts
                FlexibleInstances
                EmptyDataDecls
                NoMonomorphismRestriction
                DeriveDataTypeable
                ViewPatterns
                TupleSections
                RecordWildCards

                RankNTypes
                NamedFieldPuns

    build-depends: base                          >= 4          && < 5
                 , yesod                         >= 1.4.1      && < 1.5
                 , yesod-core                    >= 1.4.17     && < 1.5
                 , yesod-auth                    >= 1.4.0      && < 1.5
                 , yesod-static                  >= 1.4.0.3    && < 1.6
                 , yesod-form                    >= 1.4.0      && < 1.5
                 , classy-prelude                >= 0.10.2
                 , classy-prelude-conduit        >= 0.10.2
                 , classy-prelude-yesod          >= 0.10.2
                 , bytestring                    >= 0.9        && < 0.11
                 , text                          >= 0.11       && < 2.0
                 , persistent                    >= 2.0        && < 2.3
                 , persistent-postgresql         >= 2.1.1      && < 2.3
                 , persistent-template           >= 2.0        && < 2.3
                 , template-haskell
                 , shakespeare                   >= 2.0        && < 2.1
                 , hjsmin                        >= 0.1
                 , monad-control                 >= 0.3        && < 1.1
                 , wai-extra                     >= 3.0        && < 3.1
                 , yaml                          >= 0.8        && < 0.9
                 , http-conduit                  >= 2.1        && < 2.2
                 , directory                     >= 1.1        && < 1.3
                 , warp                          >= 3.0        && < 3.3
                 , data-default
                 , aeson                         >= 0.6
                 , conduit                       >= 1.0        && < 2.0
                 , monad-logger                  >= 0.3        && < 0.4
                 , fast-logger                   >= 2.2        && < 2.5
                 , wai-logger                    >= 2.2        && < 2.3
                 , file-embed
                 , safe
                 , unordered-containers
                 , containers
                 , vector
                 , time
                 , case-insensitive
                 , wai
                 , blaze-markup

                 , base64-bytestring
                 , load-env
                 , heroku-persistent
                 , lens
                 , lens-aeson
                 , network-uri
                 , tz
                 , wreq-sb
                 , yesod-auth-oauth
                 , conduit-extra
                 , http-client
                 , lifted-base
                 , tld
                 , yesod-newsfeed
                 , blaze-html

executable         croniker
    if flag(library-only)
        Buildable: False

    main-is:           main.hs
    hs-source-dirs:    app
    build-depends:     base, croniker

    ghc-options:       -threaded -rtsopts -with-rtsopts=-N

executable         todays-profiles
    if flag(library-only)
        Buildable: False

    main-is:           TodaysProfilesTaskMain.hs
    hs-source-dirs:    app
    build-depends:     base, croniker

    ghc-options:       -threaded -O2 -rtsopts -with-rtsopts=-N

executable         all-profiles
    if flag(library-only)
        Buildable: False

    main-is:           AllProfilesTaskMain.hs
    hs-source-dirs:    app
    build-depends:     base, croniker

    ghc-options:       -threaded -O2 -rtsopts -with-rtsopts=-N

test-suite test
    type:              exitcode-stdio-1.0
    main-is:           Spec.hs
    hs-source-dirs:    test
    ghc-options:       -Wall

    other-modules: Croniker.MonikerFieldChecksSpec
                 , Croniker.UrlParserSpec
                 , Handler.CreateMonikerSpec
                 , Handler.FeedSpec
                 , Handler.RootSpec
                 , TestImport
                 , Yesod.Test.Extension

    extensions: TemplateHaskell
                QuasiQuotes
                OverloadedStrings
                NoImplicitPrelude
                CPP
                MultiParamTypeClasses
                TypeFamilies
                GADTs
                GeneralizedNewtypeDeriving
                FlexibleContexts
                FlexibleInstances
                EmptyDataDecls
                NoMonomorphismRestriction
                DeriveDataTypeable
                ViewPatterns
                TupleSections

                RankNTypes
                NamedFieldPuns

    build-depends: base
                 , croniker
                 , yesod-test >= 1.5.0.1 && < 1.6
                 , yesod-core
                 , yesod
                 , persistent
                 , persistent-postgresql
                 , resourcet
                 , monad-logger
                 , shakespeare
                 , transformers
                 , hspec >= 2.0.0
                 , classy-prelude
                 , classy-prelude-yesod
                 , aeson
                 , text >= 0.11 && < 2.0
                 , load-env
                 , tz
                 , http-types
                 , wai-extra
                 , hspec-expectations-lifted
                 , xml-conduit
